--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,12 +2,8 @@
   "extends": ["eslint:recommended", "next", "next/core-web-vitals", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "auto"
-      }
-    ],
-    "@next/next/no-img-element": "off"
+"prettier/prettier": 0,
+}, 
+ "@next/next/no-img-element": "off"
   }
-}
+
