--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+  "jsx": "react-jsx",
     "paths": {
       "@/*": ["./*"]
+
     }
   }
 }
