--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aplio",
+  "name": "Paytirement",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,8 +16,16 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.20",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@react-three/drei": "^9.107.2",
+    "@react-three/fiber": "^8.16.8",
+    "@tabler/icons-react": "^3.7.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
     "next": "^14.1.4",
@@ -28,9 +36,12 @@
     "react-markdown": "^8.0.7",
     "react-player": "^2.14.1",
     "sass": "^1.63.6",
+    "simplex-noise": "^4.0.1",
     "swiper": "^11.0.6",
-    "tailwind-merge": "^2.2.1",
-    "three": "^0.165.0"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.165.0",
+    "three-globe": "^2.31.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
