--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@react-three/drei": "^9.107.2",
     "@react-three/fiber": "^8.16.8",
     "@tabler/icons-react": "^3.7.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
+    "mongoose": "^8.5.1",
     "next": "^14.1.4",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -35,6 +37,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-markdown": "^8.0.7",
     "react-player": "^2.14.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.63.6",
     "simplex-noise": "^4.0.1",
     "swiper": "^11.0.6",
